Setup base jotai state for boards and sidebar. Setting up inital modals and click functionality for tasks.

--- a/src/styles/Sidebar.module.scss
+++ b/src/styles/Sidebar.module.scss
@@ -46,7 +46,7 @@
     margin-right: 16px;
   }
 
-  &:first-of-type {
+  &.active {
     background-color: var(--main-purple);
 
     .listIcon > path {
