--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -5,7 +5,7 @@
   display: grid;
 
   grid-template-columns: 300px 1fr;
-  grid-template-columns: clamp(150px, 20%, 300px) 1fr;
+  // grid-template-columns: clamp(150px, 20%, 300px) 1fr;
   grid-template-rows: 120px 1fr;
   grid-template-areas: 'sidebar navbar' 'sidebar main-board';
 }
