--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -47,6 +47,9 @@
 
 .dialogDescription {
   margin-bottom: 24px;
+  font-weight: 500;
+  font-size: 15px;
+  color: var(--med-grey);
 }
 
 .subtaskHeader {
